// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createComputeDiskEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "DataStore",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTimestamp": "2020-08-12T08:20:05.930-07:00",
        "guestOsFeatures": Array [
          Object {
            "type": "VIRTIO_SCSI_MULTIQUEUE",
          },
        ],
        "id": "123456789",
        "kind": "compute#disk",
        "labelFingerprint": "42WmSpB8rSM=",
        "lastAttachTimestamp": "2020-08-12T08:20:05.930-07:00",
        "licenseCodes": Array [
          "1000205",
        ],
        "licenses": Array [
          "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
        ],
        "name": "testvm",
        "physicalBlockSizeBytes": "4096",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
        "sizeGb": "10",
        "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200805",
        "sourceImageId": "6709658075886210235",
        "status": "READY",
        "tags": undefined,
        "type": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/diskTypes/pd-standard",
        "users": Array [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
        ],
        "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a",
      },
    },
  ],
  "_type": "google_compute_disk",
  "active": true,
  "classification": null,
  "createdOn": 1597245605930,
  "description": undefined,
  "displayName": "testvm",
  "encrypted": true,
  "guestOsFeatures": Array [
    "VIRTIO_SCSI_MULTIQUEUE",
  ],
  "id": "123456789",
  "kind": "compute#disk",
  "labelFingerprint": "42WmSpB8rSM=",
  "lastAttachTimestamp": 1597245605930,
  "licenseCodes": Array [
    "1000205",
  ],
  "licenses": Array [
    "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
  ],
  "name": "testvm",
  "physicalBlockSizeBytes": "4096",
  "sizeGB": "10",
  "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200805",
  "sourceImageId": "6709658075886210235",
  "status": "READY",
  "type": "pd-standard",
  "zone": "us-central1-a",
}
`;

exports[`#createComputeDiskEntity should set active to false when status is not READY 1`] = `
Object {
  "_class": Array [
    "DataStore",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "creationTimestamp": "2020-08-12T08:20:05.930-07:00",
        "guestOsFeatures": Array [
          Object {
            "type": "VIRTIO_SCSI_MULTIQUEUE",
          },
        ],
        "id": "123456789",
        "kind": "compute#disk",
        "labelFingerprint": "42WmSpB8rSM=",
        "lastAttachTimestamp": "2020-08-12T08:20:05.930-07:00",
        "licenseCodes": Array [
          "1000205",
        ],
        "licenses": Array [
          "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
        ],
        "name": "testvm",
        "physicalBlockSizeBytes": "4096",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
        "sizeGb": "10",
        "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200805",
        "sourceImageId": "6709658075886210235",
        "status": "FAILED",
        "tags": undefined,
        "type": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/diskTypes/pd-standard",
        "users": Array [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
        ],
        "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a",
      },
    },
  ],
  "_type": "google_compute_disk",
  "active": false,
  "classification": null,
  "createdOn": 1597245605930,
  "description": undefined,
  "displayName": "testvm",
  "encrypted": true,
  "guestOsFeatures": Array [
    "VIRTIO_SCSI_MULTIQUEUE",
  ],
  "id": "123456789",
  "kind": "compute#disk",
  "labelFingerprint": "42WmSpB8rSM=",
  "lastAttachTimestamp": 1597245605930,
  "licenseCodes": Array [
    "1000205",
  ],
  "licenses": Array [
    "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
  ],
  "name": "testvm",
  "physicalBlockSizeBytes": "4096",
  "sizeGB": "10",
  "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200805",
  "sourceImageId": "6709658075886210235",
  "status": "FAILED",
  "type": "pd-standard",
  "zone": "us-central1-a",
}
`;

exports[`#createComputeInstanceEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Host",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "canIpForward": false,
        "cpuPlatform": "Intel Haswell",
        "creationTimestamp": "2020-08-12T08:20:05.921-07:00",
        "deletionProtection": false,
        "disks": Array [
          Object {
            "autoDelete": true,
            "boot": true,
            "deviceName": "persistent-disk-0",
            "diskSizeGb": "10",
            "guestOsFeatures": Array [
              Object {
                "type": "VIRTIO_SCSI_MULTIQUEUE",
              },
            ],
            "index": 0,
            "interface": "SCSI",
            "kind": "compute#attachedDisk",
            "licenses": Array [
              "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
            ],
            "mode": "READ_WRITE",
            "source": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
            "type": "PERSISTENT",
          },
          Object {
            "autoDelete": true,
            "boot": false,
            "deviceName": "local-ssd-0",
            "diskSizeGb": "375",
            "index": 1,
            "interface": "SCSI",
            "kind": "compute#attachedDisk",
            "mode": "READ_WRITE",
            "type": "SCRATCH",
          },
        ],
        "fingerprint": "4gmEF7tlfn8=",
        "id": "2248191918776890954",
        "kind": "compute#instance",
        "labelFingerprint": "42WmSpB8rSM=",
        "machineType": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/machineTypes/n1-standard-1",
        "metadata": Object {
          "fingerprint": "9yLGkjCLBTs=",
          "items": Array [
            Object {
              "key": "foo",
              "value": "bar",
            },
            Object {
              "key": "startup-script",
              "value": "echo Hello",
            },
          ],
          "kind": "compute#metadata",
        },
        "name": "testvm",
        "networkInterfaces": Array [
          Object {
            "fingerprint": "RpvQNHzHRp8=",
            "kind": "compute#networkInterface",
            "name": "nic0",
            "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/networks/default",
            "networkIP": "10.128.0.2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/regions/us-central1/subnetworks/default",
          },
        ],
        "scheduling": Object {
          "automaticRestart": true,
          "onHostMaintenance": "MIGRATE",
          "preemptible": false,
        },
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
        "serviceAccounts": Array [
          Object {
            "email": "j1-gc-integration-dev-sa-tf@j1-gc-integration-dev.iam.gserviceaccount.com",
            "scopes": Array [
              "https://www.googleapis.com/auth/compute.readonly",
              "https://www.googleapis.com/auth/devstorage.read_only",
              "https://www.googleapis.com/auth/userinfo.email",
            ],
          },
        ],
        "startRestricted": false,
        "status": "RUNNING",
        "tags": Array [
          Object {
            "testvmtag1": true,
          },
          Object {
            "testvmtag2": true,
          },
        ],
        "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a",
      },
    },
  ],
  "_type": "google_compute_instance",
  "active": true,
  "canIpForward": false,
  "cpuPlatform": "Intel Haswell",
  "createdOn": 1597245605921,
  "deletionProtection": false,
  "displayName": "testvm",
  "fingerprint": "4gmEF7tlfn8=",
  "hostname": null,
  "id": "2248191918776890954",
  "kind": "compute#instance",
  "labelFingerprint": "42WmSpB8rSM=",
  "machineType": "n1-standard-1",
  "name": "testvm",
  "startRestricted": false,
  "status": "RUNNING",
  "zone": "us-central1-a",
}
`;

exports[`#createComputeInstanceEntity should set active to false when status is not RUNNING 1`] = `
Object {
  "_class": Array [
    "Host",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "canIpForward": false,
        "cpuPlatform": "Intel Haswell",
        "creationTimestamp": "2020-08-12T08:20:05.921-07:00",
        "deletionProtection": false,
        "disks": Array [
          Object {
            "autoDelete": true,
            "boot": true,
            "deviceName": "persistent-disk-0",
            "diskSizeGb": "10",
            "guestOsFeatures": Array [
              Object {
                "type": "VIRTIO_SCSI_MULTIQUEUE",
              },
            ],
            "index": 0,
            "interface": "SCSI",
            "kind": "compute#attachedDisk",
            "licenses": Array [
              "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
            ],
            "mode": "READ_WRITE",
            "source": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
            "type": "PERSISTENT",
          },
          Object {
            "autoDelete": true,
            "boot": false,
            "deviceName": "local-ssd-0",
            "diskSizeGb": "375",
            "index": 1,
            "interface": "SCSI",
            "kind": "compute#attachedDisk",
            "mode": "READ_WRITE",
            "type": "SCRATCH",
          },
        ],
        "fingerprint": "4gmEF7tlfn8=",
        "id": "2248191918776890954",
        "kind": "compute#instance",
        "labelFingerprint": "42WmSpB8rSM=",
        "machineType": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/machineTypes/n1-standard-1",
        "metadata": Object {
          "fingerprint": "9yLGkjCLBTs=",
          "items": Array [
            Object {
              "key": "foo",
              "value": "bar",
            },
            Object {
              "key": "startup-script",
              "value": "echo Hello",
            },
          ],
          "kind": "compute#metadata",
        },
        "name": "testvm",
        "networkInterfaces": Array [
          Object {
            "fingerprint": "RpvQNHzHRp8=",
            "kind": "compute#networkInterface",
            "name": "nic0",
            "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/global/networks/default",
            "networkIP": "10.128.0.2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/regions/us-central1/subnetworks/default",
          },
        ],
        "scheduling": Object {
          "automaticRestart": true,
          "onHostMaintenance": "MIGRATE",
          "preemptible": false,
        },
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
        "serviceAccounts": Array [
          Object {
            "email": "j1-gc-integration-dev-sa-tf@j1-gc-integration-dev.iam.gserviceaccount.com",
            "scopes": Array [
              "https://www.googleapis.com/auth/compute.readonly",
              "https://www.googleapis.com/auth/devstorage.read_only",
              "https://www.googleapis.com/auth/userinfo.email",
            ],
          },
        ],
        "startRestricted": false,
        "status": "SUSPENDED",
        "tags": Array [
          Object {
            "testvmtag1": true,
          },
          Object {
            "testvmtag2": true,
          },
        ],
        "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a",
      },
    },
  ],
  "_type": "google_compute_instance",
  "active": false,
  "canIpForward": false,
  "cpuPlatform": "Intel Haswell",
  "createdOn": 1597245605921,
  "deletionProtection": false,
  "displayName": "testvm",
  "fingerprint": "4gmEF7tlfn8=",
  "hostname": null,
  "id": "2248191918776890954",
  "kind": "compute#instance",
  "labelFingerprint": "42WmSpB8rSM=",
  "machineType": "n1-standard-1",
  "name": "testvm",
  "startRestricted": false,
  "status": "SUSPENDED",
  "zone": "us-central1-a",
}
`;

exports[`#createComputeInstanceUsesComputeDiskRelationship should convert to relationship 1`] = `
Object {
  "_class": "USES",
  "_fromEntityKey": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm",
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/instances/testvm|uses|https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
  "_toEntityKey": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev/zones/us-central1-a/disks/testvm",
  "_type": "google_compute_instance_uses_disk",
  "autoDelete": true,
  "deviceName": "persisten-disk-0",
  "displayName": "USES",
  "interface": "SCSI",
  "mode": "READ_WRITE",
}
`;
